--- a/index.html
+++ b/index.html
@@ -13,19 +13,29 @@
     <title>Weather Dashboard</title>
   </head>
 
-  <body class="min-100-vh flex-column bg-light">
-    <header class="p-4 text-center text-white bg-primary bg-gradient">
+  <body class="min-100-vh flex-column">
+    <header class="p-4 text-center text-white bg-primary custom-gradient">
       <h1>Weather Dashboard</h1>
     </header>
 
-    <main class="container flex-row justify-center align-center col-auto p-4">
+    <main
+      class="container flex-row justify-center align-center col-auto p-4 m-2"
+    >
       <div class="row">
         <div class="col-3">
+          <!--Input/Search/History-->
           <section class="card card-rounded bg-white">
             <header class="card-header">
               <h2 class="text-black">Search for a city:</h2>
-              <input placeholder="Search for a city" />
-              <button class="btn-primary">Search</button>
+              <div class="input-group mb-3">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder=""
+                  id="search-input"
+                />
+                <button class="btn btn-dark">Search</button>
+              </div>
             </header>
 
             <div class="card-body justify-center p-4">
@@ -39,12 +49,18 @@
             </div>
 
             <footer class="card-footer text-center">
-              ADD FOOTER NOTE HERE?
+              Weather information provided by
+              <a href="https://openweathermap.org/forecast5">OpenWeather</a>
             </footer>
           </section>
         </div>
         <div class="col-9">
-          <p>stuff goes here</p>
+          <div class="border border-dark p-2 m-2 ms-0">
+            Current weather goes here
+          </div>
+          <div class="border border-dark p-2 m-2 ms-0">
+            5 day weather forecast goes here
+          </div>
         </div>
       </div>
     </main>
