Retrieve city name from input

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   placeholder=""
                   id="search-input"
                 />
-                <button class="btn btn-dark">Search</button>
+                <button class="btn btn-dark" id="search-btn">Search</button>
               </div>
             </header>
 
